# backend-cloud-auth

./: Dockerfile  README.md  pyproject.toml
core/: settings.py  urls.py
users/: models.py  serializer.py  tests.py  urls.py  views.py
users/auth/: urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
